my/target/test/cgdb-scan/2022-04-20-221913-54623-1/failures/clang_other_error_wlzRKv.ii.stderr.txt
test/cc/glog.cc:2:10: fatal error: 'glog/logging.h' file not found
#include <glog/logging.h>
         ^~~~~~~~~~~~~~~~
1 error generated.
